# ai-agent

agent-cs/: .gitignore  agent.py  config.py  docker-compose.yml  knowledge.py  main.py  pyproject.toml  tools.py
agent-cs/docs/: faq.txt
agent-cs/static/: index.html
agent-study/: .env  .gitignore  knowledge.py  main.py  mcp.py  mcp_demo.py  note.txt  prompt_manager.py  pyproject.toml  structured_response.py  test.py
agent-study/chroma_db/: .kb_hash  chroma.sqlite3
agent-study/eval/: run_eval.py  test_cases.json
agent-study/eval/results/: v1_20260417_163142.json  v2_20260417_163307.json
agent-study/knowledge_base/: fqa.txt
agent-study/prompts/: v1.yaml  v2.yaml
